@@ -3,14 +3,11 @@ package util;
 // START:SomeIOUtils
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
-
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
-
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static util.IOUtils.bufferedReaderOn;
@@ -23,7 +20,7 @@ class SomeIOUtils {
 
       var reader = bufferedReaderOn(path.toString());
 
-      var result = reader.lines().collect(Collectors.toList());
+      var result = reader.lines().toList();
       assertEquals(List.of("a", "b"), result);
    }
 
